--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
-/frontend/node_modules
-/frontend/dist
+frontend/node_modules
+frontend/dist
+backend/config/db.php
 
 # local env files
 .env.local
