--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.5",
     "vue-select": "^3.10.0",
-    "vuesax": "^4.0.1-alpha.25",
+    "vuesax": "^3.11.14",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
